@@ -264,7 +264,7 @@ Variables
 *Orientation(float) 
 RingDropOffset(float) - An offset to influence the ring animation. The default move down limit is calculated by (HeightScale*0.5) * Table_Scalez.
                         The final move down limit is calculated by RingDropOffset + (HeightScale*0.5)* Table_Scalez.
-                        For example: If the ring is moving too far down you have try to set the RingDropOffset to -10.
+                        For example: If the ring is moving too far down you have to try to set the RingDropOffset to -10.
 RingSpeed(float)
 *X(float) - X position
 *Y(float) - Y position
